measure fidelity with sctbench